<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:background="#F1F0F0"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="170dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/lo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#F1F0F0">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="WELCOME TO FOCUS POINT"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            app:fontFamily="@font/karla" />


                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="23dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="STUDENT LOGIN"
                        android:textColor="@color/black"
                        app:fontFamily="@font/karla" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="10dp"
                            android:hint="Enter Username"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            app:fontFamily="@font/karla" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="10dp"

                            android:hint="@string/Loginuserpass"
                            android:inputType="textPassword"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/buttonview"

                        android:text="@string/btnlogin"
                        android:textColor="#fff"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/buttonview"

                    android:gravity="center"
                    android:text="@string/checkcourse"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/buttonview"

                    android:gravity="center"
                    android:text="View All Notices"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/visitor"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/buttonview"
                    android:gravity="center"
                    android:text="@string/visitor"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:id="@+id/tv_call"
                        android:text="Call"
                        android:gravity="center"
                        android:textColor="@color/white"/>


                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_whatsapp2"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_call"
                        android:layout_marginLeft="10dp"
                        android:text="Admin"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        />

                    <TextView
                        android:layout_toRightOf="@id/tv_whatsapp2"
                        android:id="@+id/tv_whatsapp"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="Support"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        />

                    <TextView
                        android:id="@+id/tv_facbook"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/tv_whatsapp"
                        android:gravity="center"
                        android:text="FB"
                        android:textColor="@color/white"
                        android:textSize="8sp" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_youtube"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_facbook"
                        android:layout_marginLeft="10dp"
                        android:text="Youtube"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_email"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_youtube"
                        android:layout_marginLeft="10dp"
                        android:text="Email"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        />

                </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="45dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_phone"
                    android:padding="5dp"
                    android:background="@color/colorPrimary"/>


                <ImageView
                    android:id="@+id/iv_whatsapp2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_phone"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/whatsappimg"
                    android:padding="5dp"
                    android:background="#25D366"/>
                <!--<View-->
                    <!--android:id="@+id/view"-->
                    <!--android:layout_width="10dp"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:layout_height="match_parent"/>-->

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_whatsapp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@id/iv_whatsapp2"
                    android:src="@drawable/whatsappimg"
                    android:padding="5dp"
                    android:background="#25D366"/>

                <ImageView
                    android:src="@drawable/facebook"
                    android:id="@+id/facbook"
                    android:layout_toRightOf="@id/iv_whatsapp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <ImageView
                    android:background="@color/white"
                    android:id="@+id/iv_youtube"
                    android:scaleType="fitXY"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/facbook"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/youtube2"/>

                <ImageView
                    android:id="@+id/iv_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_youtube"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_email"
                    android:padding="5dp"
                    android:background="@color/colorPrimary"/>


            </RelativeLayout>




            </LinearLayout>


        </LinearLayout>



    </ScrollView>



</LinearLayout>
